counites problem with native-image I need help