@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>org.unigrid.hedgehog</groupId>
 			<artifactId>hedgehog-common</artifactId>
-			<version>0.0.8-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.graalvm.sdk</groupId>
@@ -234,8 +234,7 @@
 			<groupId>org.jacoco</groupId>
 			<artifactId>org.jacoco.agent</artifactId>
 			<classifier>runtime</classifier>
-			<version>0.8.8</version>
-			<scope>test</scope>
+			<version>0.8.14</version> <scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -249,19 +248,13 @@
 			<version>0.2.6</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- Great library for analyzing modules
-		<dependency>
-			<groupId>org.burningwave</groupId>
-			<artifactId>core</artifactId>
-			<version>12.62.0</version>
-		</dependency> -->
 	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<executions>
+				<artifactId>jacoco-maven-plugin</artifactId> 
+				<version>0.8.14</version> <executions>
 					<execution>
 						<id>pre-unit-test</id>
 						<goals>
@@ -300,65 +293,29 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.5.0</version>
 				<configuration>
+					<forkCount>1</forkCount>
+					<reuseForks>false</reuseForks>
+					<forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds> <forkedProcessExitTimeoutInSeconds>60</forkedProcessExitTimeoutInSeconds>
+					
+					<systemPropertyVariables>
+						<testoutput.target>${project.build.directory}</testoutput.target>
+						<awaitility.timeout.multiplier>3</awaitility.timeout.multiplier>
+					</systemPropertyVariables>
+					
 					<argLine>
 						@{surefireArgLine}
-						-javaagent:"${settings.localRepository}"/com/github/hazendaz/jmockit/jmockit/1.49.3/jmockit-1.49.3.jar
+						-Dorg.awaitility.timeout=60000 -javaagent:"${settings.localRepository}"/com/github/hazendaz/jmockit/jmockit/1.49.3/jmockit-1.49.3.jar
 						-Dorg.jboss.netty.debug=true
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=ALL-UNNAMED
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model.cdi=weld.core.impl
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model=info.picocli
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model.network=com.fasterxml.jackson.databind
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model.spork=com.fasterxml.jackson.databind
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model=com.fasterxml.jackson.databind
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model=org.unigrid.hedgehog.common
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog=info.picocli
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=jersey.server
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command=info.picocli
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.cli=info.picocli
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.cli.spork=info.picocli
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.option=info.picocli
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.util=info.picocli
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.cdi=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.cdi=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network=org.apache.commons.lang3
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network.handler=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network.handler=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network.packet=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.producer=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.spork=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.spork=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.p2p=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=weld.core.impl
-                                                --add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.service=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.service=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.producer=org.apache.commons.lang3
+						--enable-native-access=ALL-UNNAMED
 						--add-opens java.base/java.lang=ALL-UNNAMED
 						--add-opens java.base/java.math=ALL-UNNAMED
 						--add-opens java.base/java.net=ALL-UNNAMED
 						--add-opens java.base/java.time=ALL-UNNAMED
 						--add-opens java.base/java.util=ALL-UNNAMED
-						--add-reads org.unigrid.hedgehog.common=org.unigrid.hedgehog
+						--add-opens java.base/java.nio=ALL-UNNAMED
 					</argLine>
-					<trimStackTrace>false</trimStackTrace>
-					<reuseForks>false</reuseForks>
-					<forkCount>${system.numcores}</forkCount>
-					<systemPropertyVariables>
-						<testoutput.target>${project.build.directory}</testoutput.target>
-					</systemPropertyVariables>
-					<enableAssertions>true</enableAssertions>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -380,15 +337,16 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.10.1</version>
+				<version>3.13.0</version>
 				<configuration>
-					<release>17</release>
+					<source>25</source>
+					<target>25</target>
 					<showDeprecation>true</showDeprecation>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-							<version>1.18.24</version>
+							<version>1.18.44</version>
 						</path>
 						<path>
 							<groupId>info.picocli</groupId>
@@ -410,9 +368,7 @@
 						<configuration>
 							<archive>
 								<manifest>
-									<mainClass>
-										org.unigrid.hedgehog.Hedgehog
-									</mainClass>
+									<mainClass>org.unigrid.hedgehog.Hedgehog</mainClass>
 								</manifest>
 							</archive>
 							<descriptors>
@@ -423,9 +379,9 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>org.jboss.jandex</groupId>
+				<groupId>io.smallrye</groupId>
 				<artifactId>jandex-maven-plugin</artifactId>
-				<version>1.2.3</version>
+				<version>3.1.2</version>
 				<executions>
 					<execution>
 						<id>make-index</id>
@@ -449,24 +405,19 @@
 				<artifactId>maven-project-info-reports-plugin</artifactId>
 				<version>3.3.0</version>
 			</plugin>
-			<plugin>
-				<groupId>pl.gdela</groupId>
-				<artifactId>socomo-maven</artifactId>
-				<dependencies>
-					<dependency>
-						<groupId>org.ow2.asm</groupId>
-						<artifactId>asm</artifactId>
-						<version>9.1</version>
-					</dependency>
-				</dependencies>
-				<executions>
-					<execution>
-						<goals>
-							<goal>analyze</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+            <plugin>
+                <groupId>pl.gdela</groupId>
+                <artifactId>socomo-maven</artifactId>
+                <configuration>
+                    <skip>true</skip> </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>analyze</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 		<resources>
 			<resource>
@@ -484,26 +435,6 @@
 			</testResource>
 		</testResources>
 	</build>
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-pmd-plugin</artifactId>
-				<version>3.16.0</version>
-				<configuration>
-					<includeTests>true</includeTests>
-					<targetJdk>17</targetJdk>
-					<rulesets>
-						<ruleset>${project.basedir}/pmd.xml</ruleset>
-					</rulesets>
-				</configuration>
-
-			</plugin>
-			<plugin>
-				<groupId>com.github.spotbugs</groupId>
-				<artifactId>spotbugs-maven-plugin</artifactId>
-				<version>4.6.0.0</version>
-			</plugin>
-		</plugins>
-	</reporting>
 </project>
+
+
